Prepare project for Vercel deployment
- Create professional landing page with AI journaling features
- Add vercel.json configuration for optimal deployment
- Update environment variables for production support
- Create comprehensive Vercel deployment documentation
- Update README with deployment instructions and options
- Configure CORS headers and function timeouts for API routes

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ NODE_ENV=development
 
 # Application URL
 # Used for generating absolute URLs
+# Development: http://localhost:3000
+# Production: https://your-app-name.vercel.app
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # =============================================================================
@@ -72,3 +74,27 @@ VERBOSE_LOGGING=false
 
 # Enable experimental features
 # ENABLE_EXPERIMENTAL_FEATURES=false
+
+# =============================================================================
+# Production Deployment (Vercel)
+# =============================================================================
+
+# These environment variables should be set in Vercel dashboard:
+# 1. Go to your Vercel project settings
+# 2. Navigate to Environment Variables
+# 3. Add the following variables:
+#
+# OPENAI_API_KEY (required) - Your OpenAI API key
+# OPENAI_ORG_ID (optional) - Your OpenAI organization ID
+# OPENAI_MODEL (optional) - Default: gpt-4
+# NODE_ENV (automatic) - Set to "production" by Vercel
+# NEXT_PUBLIC_APP_URL (required) - Your Vercel app URL
+
+# =============================================================================
+# Local Development Setup Instructions
+# =============================================================================
+
+# 1. Copy this file to .env.local
+# 2. Replace placeholder values with your actual API keys
+# 3. Never commit .env.local to version control
+# 4. For production, set environment variables in Vercel dashboard
