--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run clean:trace && next dev",
+    "dev:force": "npm run clean:next && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,6 +12,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "clean:trace": "node -e \"try { require('fs').unlinkSync('.next/trace'); } catch(e) {}\"",
+    "clean:next": "node -e \"try { require('fs').rmSync('.next', {recursive: true, force: true}); } catch(e) {}\"",
     "prepare": "husky"
   },
   "dependencies": {
