Complete Story 1.1: Implement Journaling Page UI and Markdown Editor
 STORY 1.1 COMPLETE - All Acceptance Criteria Met

 Acceptance Criteria Fulfilled:
- AC 1.1.1:  Journal page accessible via /journal route
- AC 1.1.2:  Prominent multi-line text input area for journal entries
- AC 1.1.3:  Basic Markdown formatting support (bold, italics, headings)
- AC 1.1.4:  Clear Save button with visual feedback
- AC 1.1.5:  Responsive UI for mobile and desktop

 Key Features Implemented:
- Professional journal page layout with date display
- Advanced Markdown editor with @uiw/react-md-editor
- Multiple view modes: Edit, Live Preview, Preview Only
- Smart save system with auto-save and unsaved changes indicator
- Keyboard shortcuts (Ctrl+S to save)
- Responsive design with mobile-optimized editor height
- Comprehensive Markdown quick reference guide
- Visual feedback for save states (Saving, Saved, Unsaved)
- Character count and last saved timestamp

 Technical Implementation:
- Feature-Sliced Design architecture
- Zustand state management for editor content
- Tailwind CSS responsive design
- TypeScript for type safety
- Windows-compatible development scripts

 Files Created/Modified:
- src/app/journal/page.tsx - Main journal page component
- src/app/journal/layout.tsx - Journal-specific layout
- src/features/editor/components/MarkdownEditor.tsx - Advanced editor
- src/features/editor/hooks/useEditorContent.ts - State management
- scripts/clean-windows.js - Windows development support
- package.json - Added dev scripts and dependencies

Story 1.1 is now complete and ready for user testing!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "npm run clean:trace && next dev",
+    "dev:safe": "node -e \"const fs = require('fs'); try { if (fs.existsSync('.next/trace')) { require('child_process').execSync('del /f /q \\\".next\\\\trace\\\"', {stdio: 'ignore'}); } } catch(e) {}\" && next dev",
     "dev:force": "npm run clean:next && next dev",
+    "dev:windows": "node scripts/clean-windows.js && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,14 +14,17 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
-    "clean:trace": "node -e \"try { require('fs').unlinkSync('.next/trace'); } catch(e) {}\"",
-    "clean:next": "node -e \"try { require('fs').rmSync('.next', {recursive: true, force: true}); } catch(e) {}\"",
+    "clean:trace": "node -e \"const fs = require('fs'); const path = require('path'); try { if (fs.existsSync('.next/trace')) { fs.chmodSync('.next/trace', 0o666); fs.unlinkSync('.next/trace'); } } catch(e) { console.log('Trace cleanup:', e.message); }\"",
+    "clean:next": "node -e \"const fs = require('fs'); try { if (fs.existsSync('.next')) { fs.rmSync('.next', {recursive: true, force: true, maxRetries: 3, retryDelay: 100}); } } catch(e) { console.log('Next cleanup:', e.message); }\"",
+    "clean:windows": "node scripts/clean-windows.js",
     "prepare": "husky"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^4.0.8",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
