Complete Story 1.3: Display Journal Entry History
 STORY 1.3 COMPLETE - All Acceptance Criteria Met

 Acceptance Criteria Fulfilled:
- AC 1.3.1:  List of previously saved journal entries displayed
- AC 1.3.2:  Each entry shows preview of content (first 120 chars)
- AC 1.3.3:  Timestamps displayed with relative/absolute time
- AC 1.3.4:  Click entry to view full content with dual navigation

 Key Features Implemented:
- Professional journal entry cards with rich metadata
- Smart content preview with Markdown formatting cleanup
- Intelligent time display (relative + absolute on hover)
- Dual navigation: quick edit + detailed view pages
- Advanced sorting: newest, oldest, title, recently updated
- Responsive design with mobile optimization
- Empty state with friendly onboarding

 Technical Implementation:
- JournalCard component with hover effects and selection states
- JournalList component with sorting and collapsible interface
- EmptyState component for first-time user experience
- Dynamic routing: /journal/[id] for detailed entry view
- Enhanced journal store with custom date serialization
- Fixed localStorage date handling issues

 Files Created/Modified:
- src/features/journal/components/JournalCard.tsx - Entry card component
- src/features/journal/components/JournalList.tsx - List container
- src/features/journal/components/EmptyState.tsx - Empty state handling
- src/app/journal/[id]/page.tsx - Dynamic entry detail page
- src/app/journal/page.tsx - Updated main journal page layout
- src/shared/store/journalStore.ts - Enhanced with date serialization
- src/features/editor/components/MarkdownEditor.tsx - Fixed date handling

 Bug Fixes:
- Fixed TypeError: lastSaved.toLocaleTimeString is not a function
- Added custom localStorage serialization for Date objects
- Enhanced error handling for date formatting
- Improved data persistence and recovery

Story 1.3 is now complete with comprehensive entry history functionality!

--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "clean:trace": "node -e \"const fs = require('fs'); const path = require('path'); try { if (fs.existsSync('.next/trace')) { fs.chmodSync('.next/trace', 0o666); fs.unlinkSync('.next/trace'); } } catch(e) { console.log('Trace cleanup:', e.message); }\"",
     "clean:next": "node -e \"const fs = require('fs'); try { if (fs.existsSync('.next')) { fs.rmSync('.next', {recursive: true, force: true, maxRetries: 3, retryDelay: 100}); } } catch(e) { console.log('Next cleanup:', e.message); }\"",
     "clean:windows": "node scripts/clean-windows.js",
+    "kill:ports": "node scripts/kill-port.js",
+    "dev:clean": "npm run kill:ports && npm run clean:windows && next dev",
     "prepare": "husky"
   },
   "dependencies": {
     "@uiw/react-md-editor": "^4.0.8",
+    "date-fns": "^4.1.0",
+    "immer": "^10.1.1",
+    "nanoid": "^5.1.5",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
