Complete Story 2.1: Integrate OpenAI API Client
 STORY 2.1 COMPLETE - All Acceptance Criteria Met

 Acceptance Criteria Fulfilled:
- AC 2.1.1:  OpenAI SDK installed and configured (v4.28.0)
- AC 2.1.2:  Service wrapper with error handling and retry logic
- AC 2.1.3:  Test API endpoint for connectivity verification
- AC 2.1.4:  Environment configuration with validation

 Key Features Implemented:
- Complete OpenAI service layer with TypeScript types
- Comprehensive error handling and categorization
- Exponential backoff retry mechanism with jitter
- Configuration validation and environment management
- Test API routes for connectivity and status checks

 Technical Implementation:
- OpenAI SDK 4.28.0 integration with proper client initialization
- Feature-Sliced Design architecture for AI functionality
- Robust error processing with user-friendly messages
- Rate limiting and timeout configuration
- Secure API key handling and validation

 Files Created:
- src/features/ai-insights/types/openai.types.ts - Complete type definitions
- src/config/openai.ts - Configuration management and validation
- src/shared/lib/api/errors.ts - Error handling utilities
- src/features/ai-insights/services/openaiService.ts - Core service layer
- src/app/api/ai/test/route.ts - Test API endpoints (GET/POST)

 Infrastructure Features:
- Environment variable validation with detailed error messages
- Multiple model support (GPT-3.5-turbo, GPT-4, GPT-4-turbo)
- Configurable temperature, max tokens, and timeout settings
- Automatic retry with exponential backoff for transient failures
- Comprehensive error categorization (auth, rate limit, network, etc.)

 Security & Reliability:
- API key format validation and secure handling
- Request sanitization and validation
- Rate limiting with intelligent retry logic
- Timeout protection and network error handling
- No client-side exposure of sensitive configuration

 API Endpoints:
- GET /api/ai/test - Configuration status and availability check
- POST /

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,20 @@ OPENAI_ORG_ID=your_organization_id_here
 
 # OpenAI Model Configuration
 # Default model to use for completions
-OPENAI_MODEL=gpt-4
+# Options: gpt-3.5-turbo, gpt-4, gpt-4-turbo-preview
+OPENAI_MODEL=gpt-3.5-turbo
+
+# OpenAI Temperature (0.0 to 2.0)
+# Controls randomness in responses (0 = deterministic, 2 = very random)
+OPENAI_TEMPERATURE=0.7
+
+# OpenAI Max Tokens
+# Maximum number of tokens to generate in responses
+OPENAI_MAX_TOKENS=1000
+
+# OpenAI Base URL (Optional)
+# Custom API endpoint if using a proxy or different service
+# OPENAI_BASE_URL=https://api.openai.com/v1
 
 # =============================================================================
 # Application Configuration
