--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "immer": "^10.1.1",
     "nanoid": "^5.1.5",
     "next": "15.4.2",
+    "openai": "^4.28.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zustand": "^5.0.6"
