feat: enhance AI analysis functionality with smart caching

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,27 @@ OPENAI_ORG_ID=your_organization_id_here
 
 # OpenAI Model Configuration
 # Default model to use for completions
-# Options: gpt-3.5-turbo, gpt-4, gpt-4-turbo-preview
-OPENAI_MODEL=gpt-3.5-turbo
+# Options: gpt-3.5-turbo, gpt-4, gpt-4-turbo-preview, gpt-4o-mini (recommended)
+OPENAI_MODEL=gpt-4o-mini
+
+# =============================================================================
+# AI Provider Configuration (NEW!)
+# =============================================================================
+
+# AI Provider Selection
+# Options: 'openai' | 'gemini' | 'ollama'
+# Recommended: 'ollama' for development, 'gemini' for production
+AI_PROVIDER=ollama
+
+# Google Gemini Configuration (free tier available)
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-1.5-flash
+
+# Ollama Configuration (local, completely free)
+# Install Ollama from: https://ollama.ai
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b
 
 # OpenAI Temperature (0.0 to 2.0)
 # Controls randomness in responses (0 = deterministic, 2 = very random)
