--- a/.env.example
+++ b/.env.example
@@ -73,15 +73,57 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # DATABASE_URL=your_database_connection_string
 
 # =============================================================================
-# Security Configuration
+# Authentication Configuration (NextAuth.js)
 # =============================================================================
 
-# NextAuth Secret (when authentication is implemented)
+# NextAuth Secret - Required for JWT encryption
 # Generate with: openssl rand -base64 32
-# NEXTAUTH_SECRET=your_nextauth_secret
+NEXTAUTH_SECRET=your_nextauth_secret_here
 
-# NextAuth URL (when authentication is implemented)
-# NEXTAUTH_URL=http://localhost:3000
+# NextAuth URL - Application base URL
+NEXTAUTH_URL=http://localhost:3000
+
+# =============================================================================
+# Supabase Configuration
+# =============================================================================
+
+# Supabase Project URL
+# Get from: https://app.supabase.com/project/[project-id]/settings/api
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+
+# Supabase Anonymous Key
+# Get from: https://app.supabase.com/project/[project-id]/settings/api
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Supabase Service Role Key (for server-side operations)
+# Get from: https://app.supabase.com/project/[project-id]/settings/api
+# WARNING: Keep this secret! Never expose in client-side code
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# =============================================================================
+# OAuth Provider Configuration
+# =============================================================================
+
+# GitHub OAuth
+# Create app at: https://github.com/settings/applications/new
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+
+# Google OAuth
+# Create app at: https://console.developers.google.com/
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# =============================================================================
+# Email Configuration (for email sign-in)
+# =============================================================================
+
+# SMTP Server Configuration
+EMAIL_SERVER_HOST=smtp.gmail.com
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER=your_email@gmail.com
+EMAIL_SERVER_PASSWORD=your_app_password
+EMAIL_FROM=noreply@yourapp.com
 
 # =============================================================================
 # Development Configuration
