--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.10.0",
+    "@supabase/supabase-js": "^2.53.0",
     "@uiw/react-md-editor": "^4.0.8",
     "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "nanoid": "^5.1.5",
     "next": "15.4.2",
+    "next-auth": "^4.24.11",
     "openai": "^4.28.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
